--- a/src/components/Fallback/Fallback.module.css
+++ b/src/components/Fallback/Fallback.module.css
@@ -19,19 +19,17 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	height: 3px;
-	animation: fade-in 2s linear;
+	animation: fade-in 0.3s linear;
 }
 
-.progress::before {
+.bar {
 	position: absolute;
 	display: block;
 	content: '';
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	transform: scaleX(1);
 	transition: transform 0.3s linear;
-	animation: progress 60s ease-in-out;
 }
 
 .progress::after {
@@ -45,16 +43,12 @@
 	transform: scaleX(0);
 }
 
-.progress-load::after {
-	transform: scaleX(1);
-}
-
 .loader {
 	display: flex;
 	flex-direction: row;
 	font-size: 24px;
 	padding-bottom: 14px;
-	animation: fade-in 0.5s linear;
+	animation: fade-in 0.3s linear;
 }
 
 .loader::after {
