--- a/src/components/SceneLayout/SceneLayout.module.css
+++ b/src/components/SceneLayout/SceneLayout.module.css
@@ -4,7 +4,7 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	transition: opacity 1s ease-in 2s;
+	transition: opacity 1s ease-in;
 }
 
 .fallback,
