--- a/src/components/Fallback/Fallback.module.css
+++ b/src/components/Fallback/Fallback.module.css
@@ -12,6 +12,24 @@
 	text-align: center;
 }
 
+.advice {
+	 position: absolute;
+	 top: 28px;
+	 font-size: 20px;
+	 padding: 0 20px;
+	 animation: fade-in 0.5s linear;
+ }
+
+.advice-title {
+	display: block;
+	padding-bottom: 20px;
+	font-style: italic;
+}
+
+.advice-text {
+	display: block;
+}
+
 .progress {
 	position: relative;
 	width: 100%;
@@ -19,19 +37,17 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	height: 3px;
-	animation: fade-in 2s linear;
+	animation: fade-in 0.3s linear;
 }
 
-.progress::before {
+.bar {
 	position: absolute;
 	display: block;
 	content: '';
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	transform: scaleX(1);
 	transition: transform 0.3s linear;
-	animation: progress 60s ease-in-out;
 }
 
 .progress::after {
@@ -45,16 +61,12 @@
 	transform: scaleX(0);
 }
 
-.progress-load::after {
-	transform: scaleX(1);
-}
-
 .loader {
 	display: flex;
 	flex-direction: row;
 	font-size: 24px;
 	padding-bottom: 14px;
-	animation: fade-in 0.5s linear;
+	animation: fade-in 0.3s linear;
 }
 
 .loader::after {
